--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "parcel build index.html"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.1.0",
     "parcel-bundler": "^1.10.3",
     "posthtml-expressions": "^1.1.0",
     "posthtml-include": "^1.2.0",
     "posthtml-md": "^1.1.0",
-    "sass": "^1.14.3"
+    "sass": "^1.14.3",
+    "tailwindcss": "^0.7.2"
   },
-  "dependencies": {
-    "bulma": "^0.7.2"
-  }
+  "dependencies": {}
 }
